# fructify

./: .eslintrc.json  .gitignore  Makefile  README.md  dashboard.html  dashboard.js  days_until_sample.json  default-style.js  dev-requirements.in  dev-requirements.txt  ftp.txt  gcal_sample.json  htaccess  index.html  local_server.py  logged-in.js  make_env.sh  next.config.js  now.json  package-lock.json  package.json  passenger_wsgi.py  prtest.txt  pyproject.toml  requirements.txt  setup.py  test_passenger_wsgi.py  tox.ini  vercel.json
.circleci/: config.yml
.github/: copilot-instructions.md
api/: index.py
api/v1/: auth0callback.py  authcheck.py  cleaning_from_gcal.py  days_until.py  debug.py  googlecalendars.py  googlecallback.py  googlecheck.py  googlelink.py  login.py  logout.py  telegramchats.py  telegramdeeplink.py  telegramwebhook.py
fructify/: app.py  auth.py  constants.py  googleevents.py  help.py  tracing.py
fructify.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fructify/blueprints/: auth0callback.py  authcheck.py  calendarcron.py  cleaning_from_gcal.py  days_until.py  debug.py  googlecalendars.py  googlecalendarwebhook.py  googlecallback.py  googlecheck.py  googlelink.py  googletelegramlinks.py  login.py  logout.py  renewwatchcron.py  telegramchats.py  telegramdeeplink.py  telegramwebhook.py
pages/: dashboard.js  index.js
public/: README.md
tests/api/v1/: test_days_until.py
tests/fructify/: test_googleevents.py  test_help.py  test_tracing.py
tests/fructify/blueprints/: test_calendarcron.py  test_days_until.py  test_googlecalendarwebhook.py
