[project]
name = "fructify"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "authlib~=1.0",
    "blinker~=1.4",
    "flask~=3.1",
    "opentelemetry-exporter-otlp-proto-http~=1.28",
    "opentelemetry-instrumentation-flask>=0.49b0",
    "opentelemetry-instrumentation-requests>=0.49b0",
    "opentelemetry-sdk~=1.28",
    "psycopg2-binary~=2.9",
    "requests~=2.23",
    "wrapt~=1.16",
]

[dependency-groups]
dev = [
    "black~=26.3",
    "flake8~=7.0",
    "python-dotenv~=0.21",
    "tox>=4.0",
    "tox-uv>=1.0",
]

[tool.black]
target-version = ["py312"]

[tool.uv]
constraint-dependencies = [
    "authlib==1.6.8",
    "certifi==2024.7.4",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "googleapis-common-protos==1.72.0",
    "idna==3.7",
    "markupsafe==2.1.2",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp-proto-common==1.39.1",
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
    "opentelemetry-instrumentation==0.60b1",
    "opentelemetry-instrumentation-flask==0.60b1",
    "opentelemetry-instrumentation-requests==0.60b1",
    "opentelemetry-instrumentation-wsgi==0.60b1",
    "opentelemetry-proto==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "opentelemetry-util-http==0.60b1",
    "pycparser==2.20",
    "requests==2.32.4",
]
